package car.manager;

public enum RegistrationStatus {
    UNREGISTERED,
    ACTIVE,
    SUSPENDED
}